Fix box label width on mobile

--- a/livingdex/static/main.css
+++ b/livingdex/static/main.css
@@ -67,11 +67,12 @@ main {
     .box-label {
       position: sticky;
       left: 0;
+      flex-basis: 4ch;
+      flex-shrink: 0;
       background-color: var(--background-primary);
       border: 4px solid;
       border-top-width: 0;
       font-size: 3em;
-      width: 4ch;
       text-align: center;
       align-content: center;
       &:not(:has(~ .box-content > div:not(:is(.caught, .filler)))) {
